--- a/index.html
+++ b/index.html
@@ -72,8 +72,27 @@
       <img src="img/20211219_011624.jpg" alt="Wenny" width="200" class="rounded-circle" img-thumbnail>
       <h1 class="fs-1">Wenny Rizki Wardani</h1>
       <p class="lead">Detail-Oriented Admin Professional | Accounting and Data Analysis Enthusiast</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#eb7cdc85" fill-opacity="0.6" d="M0,192L14.1,170.7C28.2,149,56,107,85,122.7C112.9,139,141,213,169,229.3C197.6,245,226,203,254,176C282.4,149,311,139,339,149.3C367.1,160,395,192,424,176C451.8,160,480,96,508,74.7C536.5,53,565,75,593,74.7C621.2,75,649,53,678,64C705.9,75,734,117,762,133.3C790.6,149,819,139,847,138.7C875.3,139,904,149,932,170.7C960,192,988,224,1016,202.7C1044.7,181,1073,107,1101,117.3C1129.4,128,1158,224,1186,250.7C1214.1,277,1242,235,1271,208C1298.8,181,1327,171,1355,138.7C1383.5,107,1412,53,1426,26.7L1440,0L1440,320L1425.9,320C1411.8,320,1384,320,1355,320C1327.1,320,1299,320,1271,320C1242.4,320,1214,320,1186,320C1157.6,320,1129,320,1101,320C1072.9,320,1045,320,1016,320C988.2,320,960,320,932,320C903.5,320,875,320,847,320C818.8,320,791,320,762,320C734.1,320,706,320,678,320C649.4,320,621,320,593,320C564.7,320,536,320,508,320C480,320,452,320,424,320C395.3,320,367,320,339,320C310.6,320,282,320,254,320C225.9,320,198,320,169,320C141.2,320,113,320,85,320C56.5,320,28,320,14,320L0,320Z"></path></svg>
     </section>
     <!-- End Jumbotron -->
+
+    <!-- About -->
+    <section id="about"></section>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col">
+          <h2>About Me</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias impedit amet, id pariatur aliquid suscipit atque similique veniam optio. Corporis!
+        </div>
+        <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus exercitationem sapiente, ratione voluptate consectetur mollitia et aliquam. Explicabo saepe, quisquam tempora, corrupti quod labore nemo blanditiis nostrum dolores rem nulla.
+        </div>
+      </div>
+    </div>
+    <!-- End About -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
