--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="freelance admin, bookkeeping, data analysis, document formatting, pdf conversion">
     <meta name="author" content="Wenny">
     <title>Wenny - Freelance Admin & Bookkeeping</title>
-    <link rel="stylesheet" href="styles.css"> 
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="icon" href="img/3_20241111_184746_0000.svg" type="image/x-icon">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
