--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Wenny's Logo">
+                <img src=img/3_20241111_184746_0000.svg" alt="Wenny's Logo">
                 <span>Work with Wenny</span>
             </div>
             <ul>
@@ -32,7 +32,7 @@
     <main id="main-content">
         <section id="home" class="hero">
             <div class="hero-content">
-                <img src="images/headshot.jpg" alt="Wenny - Freelance Admin & Bookkeeper" class="hero-image">
+                <img src="img/20211219_011624.jpg" alt="Wenny - Freelance Admin & Bookkeeper" class="hero-image">
                 <h1>Let’s Work with Wenny</h1>
                 <p>Providing reliable administrative, bookkeeping, and data analysis support for small businesses. Let’s simplify your workload!</p>
                 <a href="#contact" class="cta-button">Get in Touch</a>
