--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="freelance admin, bookkeeping, data analysis, document formatting, pdf conversion">
     <meta name="author" content="Wenny">
     <title>Wenny - Freelance Admin & Bookkeeping</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="styles.css"> 
     <link rel="icon" href="img/3_20241111_184746_0000.svg" type="image/x-icon">
 </head>
 <body>
