--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
             </div>
         </section>
 
+        <section id="about" class="about">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>Staying organized and managing data efficiently is crucial for businesses and professionals alike. Whether you’re an entrepreneur, a PR professional, or an executive handling large amounts of information, I provide structured solutions to simplify your workload. From document formatting to bookkeeping and data extraction, I ensure accuracy, clarity, and ease of access—so you can focus on what matters most.</p>
+            </div>
+        </section>
+        
         <section id="services" class="services">
             <div class="container">
                 <h2>Services</h2>
