--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src=img/3_20241111_184746_0000.svg" alt="Wenny's Logo">
+                <img src=img/5_20241110_170835_0000.png" alt="Wenny's Logo">
                 <span>Work with Wenny</span>
             </div>
             <ul>
@@ -34,7 +34,7 @@
             <div class="hero-content">
                 <img src="img/20211219_011624.jpg" alt="Wenny - Freelance Admin & Bookkeeper" class="hero-image">
                 <h1>Let’s Work with Wenny</h1>
-                <p>Providing reliable administrative, bookkeeping, and data analysis support for small businesses. Let’s simplify your workload!</p>
+                <p>Providing reliable administrative, bookkeeping, and data analysis support for professionals and businesses. Let’s simplify your workload!</p>
                 <a href="#contact" class="cta-button">Get in Touch</a>
             </div>
         </section>
@@ -123,4 +123,4 @@
         </nav>
     </footer>
 </body>
-                                                       </html>
+</html>
