--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
 
     <header>
         <nav>
-            <div class="logo">
-                <img src=img/5_20241110_170835_0000.png" alt="Wenny's Logo">
-                <span>Work with Wenny</span>
-            </div>
-            <ul>
-                <li><a href="#home" aria-label="Go to Home section">Home</a></li>
-                <li><a href="#about" aria-label="Learn more about me">About</a></li>
-                <li><a href="#services" aria-label="View services offered">Services</a></li>
-                <li><a href="#portfolio" aria-label="See portfolio and case studies">Portfolio</a></li>
-                <li><a href="#contact" aria-label="Contact me">Contact</a></li>
-            </ul>
+    <div class="logo">
+        <img src="img/5_20241110_170835_0000.png" alt="Wenny's Logo">
+        <span>Work with Wenny</span>
+    </div>
+    
+    <button id="nav-toggle" aria-label="Toggle menu">☰</button>
+    
+    <ul id="nav-menu">
+        <li><a href="#home" aria-label="Go to Home section">Home</a></li>
+        <li><a href="#about" aria-label="Learn more about me">About</a></li>
+        <li><a href="#services" aria-label="View services offered">Services</a></li>
+        <li><a href="#portfolio" aria-label="See portfolio and case studies">Portfolio</a></li>
+        <li><a href="#contact" aria-label="Contact me">Contact</a></li>
+    </ul>
         </nav>
     </header>
 
