--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Wenny">
     <title>Wenny - Freelance Admin & Bookkeeping</title>
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="icon" href="img/3_20241111_184746_0000.svg" type="image/x-icon">
+    <link rel="icon" href="img/10_20241111_184746_0007.png" type="image/png">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -16,7 +16,7 @@
     <header>
         <nav>
     <div class="logo">
-        <img src="img/5_20241110_170835_0000.png" alt="Wenny's Logo">
+        <img src="img/7_20241111_184746_0004.png" alt="Wenny's Logo">
         <span>Work with Wenny</span>
     </div>
     
