--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Wenny - Freelance Admin & Bookkeeping</title>
     <link rel="stylesheet" href="styles.css"> 
     <link rel="icon" href="img/10_20241111_184746_0007.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -45,7 +46,7 @@
         <section id="about" class="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Staying organized and managing data efficiently is crucial for businesses and professionals alike. Whether you’re an entrepreneur, a PR professional, or an executive handling large amounts of information, I provide structured solutions to simplify your workload. From document formatting to bookkeeping and data extraction, I ensure accuracy, clarity, and ease of access—so you can focus on what matters most.</p>
+                <p>Staying organized and managing data efficiently is crucial for businesses and professionals alike. <br>Whether you’re an entrepreneur, a PR professional, or an executive handling large amounts of information, I provide structured solutions to simplify your workload. From document formatting to bookkeeping and data extraction, I ensure accuracy, clarity, and ease of access—so you can focus on what matters most.</p>
             </div>
         </section>
         
@@ -76,7 +77,7 @@
         <section id="portfolio" class="portfolio">
             <div class="container">
                 <h2>Portfolio & Case Studies</h2>
-                <p>Explore real examples of how I’ve helped businesses with administrative support, bookkeeping, and data analysis. These case studies showcase my skills and approach to solving business challenges.</p>
+                <p>Explore real examples of how I help businesses with administrative support, bookkeeping, and data analysis. These case studies showcase my skills and approach to solving business challenges.</p>
 
                 <div class="portfolio-list">
                     <div class="portfolio-item">
@@ -98,7 +99,7 @@
         <section id="contact" class="contact">
             <div class="container">
                 <h2>Contact Me</h2>
-                <p>If you're interested in working together, feel free to reach out. I’d love to hear about your needs and how I can assist.</p>
+                <p>If you're interested in working together, feel free to reach out. <br>I’d love to hear about your needs and how I can assist.</p>
                 
                 <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
                     <label for="name">Name:</label>
@@ -118,12 +119,6 @@
 
     <footer>
         <p>&copy; 2025 Work with Wenny. All rights reserved.</p>
-        <nav>
-            <ul>
-                <li><a href="#privacy" aria-label="Privacy Policy">Privacy</a></li>
-                <li><a href="#accessibility" aria-label="Accessibility Statement">Accessibility</a></li>
-            </ul>
-        </nav>
     </footer>
 </body>
 </html>
