--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section id="portfolio" class="portfolio">
             <div class="container">
                 <h2>Portfolio & Case Studies</h2>
-                <p>Explore real examples of how I help businesses with administrative support, bookkeeping, and data analysis. These case studies showcase my skills and approach to solving business challenges.</p>
+                <p>Explore real examples of how I can help businesses and professionals with administrative support, bookkeeping, and data analysis. These case studies showcase my skills and approach to solving business challenges.</p>
 
                 <div class="portfolio-list">
                     <div class="portfolio-item">
@@ -101,7 +101,7 @@
                 <h2>Contact Me</h2>
                 <p>If you're interested in working together, feel free to reach out. <br>I’d love to hear about your needs and how I can assist.</p>
                 
-                <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <form action="https://formspree.io/f/xdkayely" method="POST">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
 
