--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h2>Contact Me</h2>
                 <p>If you're interested in working together, feel free to reach out. <br>I’d love to hear about your needs and how I can assist.</p>
                 
-                <form name="submit-to-google-sheet" action="https://formspree.io/f/xdkayely" method="POST">
+                <form name="submit-to-google-sheet">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
 
