--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 
                     <button type="submit" class="cta-button">Send Message</button>
                 </form>
+                <p id="success-message">
+                    ✅ Your message has been sent successfully!
+                </p>
             </div>
         </section>
     </main>
